Revision history for Perl extension PPI

1.118   Fri 22 Sep 2006
	Summary:
	- Better 5.10 support
	- Fixing various parsing bugs

	Details:
	- Upgraded to Module::Install 0.64
	- Improving support for dor and added //= operators
        - Fixed parsing of binary, octal and hex numbers
        - Fixed parsing of /= and *=
	- Fixed #21571 symbol() returns just sigil with adjacent braces
	- Fixed #21575 variables() chokes on list with whitespace
	- Fixed #20480 (Misparse of some floating-point numbers.)
	- Fixed #19999: Make test fails (undeclared global variable $document) under Perl 5.6.2
	  (or at least, I think I have. This needs double-checking on Perl 5.6.2)
	- Partially Fixed #16952: [PATCH] Speed up tokenizer char-by-char
	  (Did not apply the patch, but fixed a bug noted as an aside in the report)

1.117   Sat 02 Sep 2006
	Summary:
	- Fixing bugs introduced in 1.116

	Details:
	- Simple compound statements "{ 1 }" were not end-detecting properly
	- The new handling for the "-" character was shortcutting naively
	- Labelled compound statements were not end-detecting properly
	- { package => 1 } was treating package incorrectly
	- Fixed bugs in test cases submitted by the Perl::Critic team
	- Added a number of extra test cases, and introduced Test::Object
          based testing for PPI::Document objects.

1.116   Thu 31 Aug 2006
	Summary:
        - PPI::Document::File first release
	- Adding readonly attribute
	- Fixed various accumulated bugs

	Details:
	- Upgraded to Module::Install 0.63
        - Add a new file-only subclass of PPI::Document
	- Added the readonly attribute to the PPI::Document->new constructor
	- Added method PPI::Document->readonly method
        - 'goto' is a PPI::Statement::Break
	- Re-fixed #19629: End of list mistakenly seen as end of statement
	- Applied #16892: [PATCH] docs and comments
	- Fixed #16815 (location of Structure::List is not defined.)
	- Fixed misparsing of C< 1-1 >