@@ -4,7 +4,7 @@ package PPI::Structure::List;
 
 =head1 NAME
 
-PPI::Structure::List - An explicit list or scoping brace
+PPI::Structure::List - Explicit list or precedence ordering braces
 
 =head1 SYNOPSIS
 
