@@ -3,7 +3,7 @@ Revision history for Perl extension PPI
 1.118   Fri 22 Sep 2006
 	Summary:
 	- Better 5.10 support
-	- Fixing various parsing bugs
+	- Fixing various (mostly parsing) bugs
 
 	Details:
 	- Upgraded to Module::Install 0.64
@@ -17,6 +17,9 @@ Revision history for Perl extension PPI
 	  (or at least, I think I have. This needs double-checking on Perl 5.6.2)
 	- Partially Fixed #16952: [PATCH] Speed up tokenizer char-by-char
 	  (Did not apply the patch, but fixed a bug noted as an aside in the report)
+	- PPI::Document::File was returning a plain PPI::Document object, fixed.
+	- FINALLY added some basic POD for PPI::Structure, the one class I somehow
+	  keep forgetting to do.
 
 1.117   Sat 02 Sep 2006
 	Summary:
